# pr-semgrep-scanner

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  portia_agent.py  pyproject.toml  requirements.txt  start_server.py
templates/: index.html
