[project]
name = "portia-wemakedevs-hackathon"
version = "0.1.0"
description = "Portia SDK Python project for the WeMakeDevs Hackathon"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "hypercorn>=0.17.3",
    "portia-sdk-python[all]>=0.7.0",
    "quart>=0.20.0",
    "requests>=2.32.5",
]
